[gd_scene load_steps=2 format=3 uid="uid://dp0db1bqkwt3l"]

[ext_resource type="Script" uid="uid://bp7esb6334a83" path="res://addons/RPG_Maker_Database/Editors/Databases/Troops/Troop_Layout/troop_layout_slot_item.gd" id="1_pj7n2"]

[node name="TroopLayoutSlotItem" type="VBoxContainer" node_paths=PackedStringArray("x_spin_box", "y_spin_box")]
script = ExtResource("1_pj7n2")
x_spin_box = NodePath("HBoxContainer/XSpinBox")
y_spin_box = NodePath("HBoxContainer/YSpinBox")

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Slot X"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="XSpinBox" type="SpinBox" parent="HBoxContainer"]
layout_mode = 2
max_value = 3000.0
prefix = "X"

[node name="YSpinBox" type="SpinBox" parent="HBoxContainer"]
layout_mode = 2
max_value = 3000.0
prefix = "Y"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 8

[node name="DeleteButton" type="Button" parent="HBoxContainer2"]
layout_mode = 2
text = "Remove"

[connection signal="value_changed" from="HBoxContainer/XSpinBox" to="." method="_on_x_spin_box_value_changed"]
[connection signal="value_changed" from="HBoxContainer/YSpinBox" to="." method="_on_y_spin_box_value_changed"]
[connection signal="button_down" from="HBoxContainer2/DeleteButton" to="." method="_on_delete_button_button_down"]
